--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -28,31 +28,30 @@
   }
 }
 
-.feed {
-  background: $backgroundPrimary;
-  border-radius: 8px;
-  padding: 14px 18px;
+.detail {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 10px 0;
-  span {
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: bold;
-  }
-  button {
-    background: $backgroundSecondary;
-    border: none;
-    padding: 6px 8px;
-    border-radius: 8px;
-    color: $contentPrimary;
-    font-size: 14px;
-    cursor: pointer;
-  }
+}
+
+.button {
+  background: $backgroundSecondary;
+  border: none;
+  padding: 6px 8px;
+  border-radius: 8px;
+  color: $contentPrimary;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 .logout {
   cursor: pointer;
   color: $negative;
+  display: inline-block;
+  padding: 8px 10px;
+  margin-top: 46px;
+  &:hover {
+    background: $backgroundLightNegative;
+    border-radius: 4px;
+  }
 }
