--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -23,6 +23,7 @@
     padding: 4px 10px;
     background: $backgroundSecondary;
     border-radius: 8px;
+    font-size: 14px;
     &:hover {
       color: $accent;
     }
@@ -124,8 +125,11 @@
     }
   }
   .optionsTitle {
-    padding: 0 14px;
+    font-size: 18px;
+    padding: 8px 14px;
     border-bottom: 1px solid $borderOpaque;
+    font-weight: bold;
+    padding-bottom: 14px;
   }
 }
 
@@ -144,7 +148,11 @@
   justify-content: space-between;
   align-items: center;
   .loading {
-    margin-left: 28px;
+    margin-left: 12px;
+  }
+  .loadingHint {
+    font-size: 14px;
+    color: $contentSecondry;
   }
   span {
     width: 80%;
@@ -160,7 +168,7 @@
   button {
     background: $accent;
     border: none;
-    padding: 10px 14px;
+    padding: 8px 16px;
     border-radius: 8px;
     color: $backgroundPrimary;
     font-size: 14px;
