--- a/components/Settings/index.module.scss
+++ b/components/Settings/index.module.scss
@@ -8,7 +8,7 @@
 }
 
 .avatar {
-  >i {
+  i {
     transform: rotate(180deg);
     font-size: 24px;
     cursor: pointer;
@@ -23,44 +23,36 @@
   align-items: center;
   margin-top: 14px;
   margin-bottom: 24px;
-  div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    i {
-      vertical-align: middle;
-      font-size: 28px;
-      color: $contentPrimary;
-      cursor: pointer;
-      padding: 4px;
-      margin-right: 12px;
-      &:hover {
-        background: $borderOpaque;
-        border-radius: 50%;
-      }
-    }
-    img {
-      border-radius: 50%;
-    }
+  img {
+    border-radius: 50%;
   }
 }
 
-.loading {
-  margin-top: 25%;
-}
-
-.detail {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .button {
+  margin-right: 12px;
+  margin-bottom: 12px;
   background: $backgroundSecondary;
   border: none;
-  padding: 6px 8px;
+  padding: 6px 18px;
   border-radius: 8px;
   color: $contentPrimary;
   font-size: 14px;
   cursor: pointer;
+}
+
+.buttonSelected {
+  background: $backgroundLightAccent;
+  border: 1px solid $accent;
+}
+
+.logout {
+  cursor: pointer;
+  color: $negative;
+  padding: 8px 10px;
+  position: absolute;
+  bottom: 50px;
+  &:hover {
+    background: $backgroundLightNegative;
+    border-radius: 4px;
+  }
 }
