--- a/widgets/Collapse/index.module.scss
+++ b/widgets/Collapse/index.module.scss
@@ -4,6 +4,11 @@
     font-size: 16px;
     line-height: 16px;
     font-weight: bold;
+    span {
+      font-size: 12px;
+      color: $contentSecondry;
+      margin-left: 12px;
+    }
   }
   .card {
     background: $backgroundPrimary;
