--- a/components/AuthCallback/index.module.scss
+++ b/components/AuthCallback/index.module.scss
@@ -1,3 +1,11 @@
+.main {
+  max-width: 840px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 16px 18px;
+  border: 1px solid $borderOpaque;
+}
+
 @keyframes loader {
   0% {
     width: 0;
@@ -39,7 +47,6 @@
   100% {
     width: 100%;
   }
-
 }
 
 .loading {
