--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -3,7 +3,8 @@
   min-height: 100vh;
   margin: 0 auto;
   padding: 16px 18px;
-  border: 1px solid $borderOpaque;
+  border-left: 1px solid $borderOpaque;
+  border-right: 1px solid $borderOpaque;
   background: $backgroundSecondary;
 }
 
@@ -53,6 +54,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  p {
+    span {
+      color: $contentPrimary;
+    }
+  }
+}
+.increaseMargin {
+  margin-top: 10px;
+}
+
+.feedDesc {
+  span {
+    color: $contentPrimary;
+    font-size: 14px;
+  }
 }
 
 .button {
