--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -2,7 +2,7 @@
   max-width: 840px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 16px 18px;
+  padding: 12px;
   border-left: 1px solid $borderOpaque;
   border-right: 1px solid $borderOpaque;
   background: $backgroundSecondary;
@@ -22,8 +22,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 14px;
-  margin-bottom: 24px;
+  margin-bottom: 12px;
   div {
     display: flex;
     justify-content: space-between;
