--- a/components/AuthCallback/index.module.scss
+++ b/components/AuthCallback/index.module.scss
@@ -2,7 +2,7 @@
   max-width: 840px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 16px 18px;
+  padding: 0 10px 12px 10px;
 }
 
 @keyframes loader {
