--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -2,7 +2,7 @@
   max-width: 840px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 12px;
+  padding: 0 10px 12px 10px;
   border-left: 1px solid $borderOpaque;
   border-right: 1px solid $borderOpaque;
   background: $backgroundSecondary;
