--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -9,18 +9,8 @@
 }
 
 .avatar {
-  >i {
-    transform: rotate(180deg);
-    font-size: 24px;
-    cursor: pointer;
-    padding: 4px;
-    &:hover {
-      background: $borderOpaque;
-      border-radius: 50%;
-    }
-  }
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   margin-bottom: 12px;
   div {
