--- a/widgets/BottomSheet/index.module.scss
+++ b/widgets/BottomSheet/index.module.scss
@@ -24,5 +24,35 @@
     background-color: $backgroundPrimary;
     border-radius: 10px 10px 0 0;
     box-shadow: 0px 2px 20px $shadow;
+    .sheetTitle {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 8px;
+      margin-bottom: 14px;
+      align-items: center;
+      div {
+        font-size: 14px;
+        margin: 4px 0;
+        &:first-child {
+          margin-left: 24px;
+          cursor: pointer;
+          &:hover {
+            font-weight: bold;
+          }
+        }
+        &:nth-child(2) {
+          font-size: 18px;
+          font-weight: bold;
+        }
+        &:last-child {
+          margin-right: 24px;
+          color: $accent;
+          cursor: pointer;
+          &:hover {
+            font-weight: bold;
+          }
+        }
+      }
+    }
   }
 }
