--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -5,12 +5,14 @@
   padding: 0 10px 12px 10px;
   border-left: 1px solid $borderOpaque;
   border-right: 1px solid $borderOpaque;
+  background: $backgroundPrimary;
 }
 
 .avatar, .login {
   display: flex;
   justify-content: flex-end;
   cursor: pointer;
+  margin-top: 6px;
   img {
     border-radius: 50%;
   }
@@ -24,6 +26,7 @@
     background: $backgroundSecondary;
     border-radius: 8px;
     font-size: 14px;
+    margin-top: 12px;
     &:hover {
       color: $accent;
     }
@@ -109,6 +112,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: $contentPrimary;
     &:hover {
       background-color: $backgroundSecondary;
       border-radius: 6px;
