--- a/components/Settings/index.module.scss
+++ b/components/Settings/index.module.scss
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-top: 6px;
   margin-bottom: 12px;
   img {
     border-radius: 50%;
