--- a/components/TopBar/index.module.scss
+++ b/components/TopBar/index.module.scss
@@ -7,6 +7,7 @@
     padding: 4px;
     float: left;
     cursor: pointer;
+    color: $contentPrimary;
     &:hover {
       background: $borderOpaque;
       border-radius: 50%;
