--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-top: 6px;
   margin-bottom: 12px;
   div {
     display: flex;
@@ -37,6 +38,23 @@
 
 .loading {
   margin-top: 25%;
+}
+
+.empty {
+  text-align: center;
+  padding: 0 12px;
+  padding-bottom: 18px;
+  margin-top: 48px;
+  >i {
+    font-size: 68px;
+    text-align: center;
+    color: $contentSecondry;
+    padding-left: 6px; // more visual center
+  }
+  >p {
+    font-size: 16px;
+    color: $contentPrimary;
+  }
 }
 
 .sectionTitle {
