--- a/widgets/BottomSheet/index.module.scss
+++ b/widgets/BottomSheet/index.module.scss
@@ -33,6 +33,7 @@
       div {
         font-size: 14px;
         margin: 4px 0;
+        color: $contentPrimary;
         &:first-child {
           margin-left: 24px;
           cursor: pointer;
