--- a/widgets/Collapse/index.module.scss
+++ b/widgets/Collapse/index.module.scss
@@ -18,6 +18,7 @@
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    color: $contentPrimary;
   }
   .cardActive {
     border-radius: 8px 8px 0 0;
