--- a/components/Settings/index.module.scss
+++ b/components/Settings/index.module.scss
@@ -70,27 +70,6 @@
   padding: 4px 6px;
   margin-bottom: 20px;
   margin-top: 6px;
-  // .sheetTitle {
-  //   display: flex;
-  //   justify-content: space-between;
-  //   margin-bottom: 24px;
-  //   align-items: center;
-  //   div {
-  //     font-size: 14px;
-  //     margin: 4px 0;
-  //     &:first-child {
-  //       margin-left: 10px;
-  //     }
-  //     &:nth-child(2) {
-  //       font-size: 18px;
-  //       font-weight: bold;
-  //     }
-  //     &:last-child {
-  //       margin-right: 10px;
-  //       color: $accent;
-  //     }
-  //   }
-  // }
   .itemsGroup {
     overflow-y: auto;
     display: flex;
@@ -104,6 +83,7 @@
       padding: 8px 10px;
       border-radius: 8px;
       margin-right: 12px;
+      cursor: pointer;
       &:last-of-type {
         margin-right: 0;
       }
