add refollow btn loading

--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -40,6 +40,13 @@
   margin-top: 25%;
 }
 
+.btnLoading {
+  padding: 1px 18px;
+  div {
+    border-width: 2px;
+  }
+}
+
 .empty {
   text-align: center;
   padding: 0 12px;
