--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -161,6 +161,17 @@
   }
 }
 
+.errorIcon {
+  color: $notice;
+  font-size: 16px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+.errorDesc {
+  color: $contentPrimary;
+  font-size: 14px;
+}
+
 .feedPrice {
   max-width: 520px;
   margin: 0 auto;
