--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -13,7 +13,7 @@
   justify-content: flex-end;
   cursor: pointer;
   // border: 1px solid red;
-  padding: 4px 0;
+  // padding: 4px 0;
   margin-top: 6px;
   img {
     border-radius: 50%;
@@ -60,7 +60,10 @@
   justify-content: flex-end;
   align-items: center;
   color: $contentPrimary;
-  margin-top: 65px;
+  margin-top: 48px;
+  @include responsive(xs) {
+    margin-top: 32px;
+  }
   >span {
     margin-right: 12px;
     font-size: 16px;
