--- a/components/Settings/index.module.scss
+++ b/components/Settings/index.module.scss
@@ -35,7 +35,7 @@
   cursor: pointer;
   margin: 16px 0;
   p {
-    span {
+    >span {
       &:first-child {
         font-size: 16px;
         margin-right: 8px;
@@ -44,6 +44,11 @@
       &:last-child {
         font-size: 14px;
         color: $contentSecondry;
+        >span {
+          font-weight: bold;
+          // color: $accent;
+          padding: 0 2px;
+        }
       }
     }
   }
