--- a/components/Home/PriceSheet/index.module.scss
+++ b/components/Home/PriceSheet/index.module.scss
@@ -16,13 +16,6 @@
       background-color: $backgroundSecondary;
       border-radius: 6px;
     }
-    span {
-      font-size: 10px;
-      background: $backgroundLightPositive;
-      padding: 2px 4px;
-      border-radius: 4px;
-      margin-left: 8px;
-    }
     .feedIcon {
       color: $contentPrimary;
       margin-right: 8px;
@@ -49,10 +42,8 @@
   >div {
     display: flex;
     align-items: center;
-    img {
-      width: 25px;
-      height: 25px;
-      margin-right: 8px;
+    >span {
+      margin-left: 8px;
     }
   }
 }
