--- a/styles/themes.scss
+++ b/styles/themes.scss
@@ -39,7 +39,7 @@
   --backgroundAlwaysLight: #FFFFFF;
   --contentStateDisabled: #AAB4BE;
   --contentAlwaysDark: #2A2D2F;
-  --contentAlwaysLight: #C0C7CE;
+  --contentAlwaysLight: #FFFFFF;
   --contentAccent: #1E88E5;
   --contentNotice: #F57C00;
   --contentNegative: #E57373;
