--- a/widgets/Input/index.module.scss
+++ b/widgets/Input/index.module.scss
@@ -26,7 +26,7 @@
 
 .row {
   display: flex;
-  min-height: 24px;
+  height: 24px;
   align-items: center;
 
   input {
@@ -36,6 +36,7 @@
     border: 0;
     font-size: 16px;
     line-height: 24px;
+    padding: 0;
     &:focus {
       border: 0;
       outline: none;
