--- a/components/AuthCallback/index.module.scss
+++ b/components/AuthCallback/index.module.scss
@@ -87,6 +87,7 @@
   margin: 0 auto;
   text-align: center;
   padding-top: 65%;
+  color: $contentPrimary;
   p {
     &:last-child {
       color: $accent;
