--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -1,5 +1,8 @@
 .main {
-  height: calc(100vh - 145px);
+  min-height: calc(100vh - 145px);
+}
+.mainNotLogin {
+  min-height: calc(100vh - 168px);
 }
 
 .avatar, .login {
