--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -1,8 +1,8 @@
 .main {
-  min-height: calc(100vh - 145px);
-}
-.mainNotLogin {
-  min-height: calc(100vh - 168px);
+  min-height: calc(100vh - 156px);
+  @include responsive(xs) {
+    min-height: calc(100vh - 142px);
+  }
 }
 
 .avatar, .login {
