--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -1,7 +1,5 @@
 .wrap {
   max-width: 840px;
-  position: sticky;
-  top: 0;
   margin: 0 auto;
   padding: 0 10px 12px 10px;
   border-left: 1px solid $borderOpaque;
@@ -85,4 +83,9 @@
 
 .loading {
   padding-top: 64%;
+}
+
+.tempSlot {
+  min-height: calc(100vh - 110px);
+  background: $backgroundPrimary;
 }
