--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -119,7 +119,7 @@
 
 .feedInfo {
   max-width: 520px;
-  margin: 24px auto 8px auto;
+  margin: 24px auto 12px auto;
   padding: 16px;
   border-radius: 8px;
   background: $backgroundSecondary;
@@ -158,7 +158,7 @@
 
 .errorInfo {
   max-width: 520px;
-  margin: 24px auto 8px auto;
+  margin: 24px auto 12px auto;
   padding: 16px;
   border-radius: 8px;
   background: $backgroundSecondary;
@@ -181,16 +181,29 @@
   padding: 0 16px;
   >p {
     color: $contentSecondry;
-    margin-bottom: 2px;
+    margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    >span {
+      font-weight: normal;
+      font-size: 12px;
+      margin-left: 4px;
+    }
   }
   div {
     display: flex;
     align-items: center;
     p {
       font-size: 12px;
+      line-height: 16px;
       color: $contentSecondry;
+      cursor: pointer;
+      >i {
+        font-size: 14px;
+        line-height: 16px;
+        vertical-align: middle;
+        margin-left: 4px;
+      }
     }
     .divider {
       border-left: 1px solid $contentPrimary;
@@ -198,5 +211,11 @@
       margin: 0 10px;
     }
   }
+}
+
+.help {
+  font-size: 12px;
+  color: $contentSecondry;
+  white-space: nowrap;
 }
 
