--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -84,7 +84,10 @@
 }
 
 .loading {
-  padding-top: 64%;
+  // padding-top: 64%;
+  // position: absolute;
+  padding-top: 64px;
+  z-index: 99;
 }
 
 .tempSlot {
