--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 0 10px 12px 10px;
   background: $backgroundPrimary;
+  min-height: 100vh;
   @include responsive(lg) {
     border-left: 1px solid $borderOpaque;
     border-right: 1px solid $borderOpaque;
