--- a/components/User/index.module.scss
+++ b/components/User/index.module.scss
@@ -64,6 +64,11 @@
   font-size: 18px;
 }
 
+.feedCollapse {
+  border: 1px solid $notice;
+  border-radius: 8px;
+}
+
 .detail {
   display: flex;
   justify-content: space-between;
@@ -73,6 +78,9 @@
       color: $contentPrimary;
     }
     &:nth-child(2) {
+      padding-top: 4px;
+    }
+    &:nth-child(3) {
       padding: 4px 0;
     }
   }
