--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -220,7 +220,8 @@
 }
 
 .hot {
-  display: inline-block;
+  display: block;
+  max-width: 520px;
   font-size: 14px;
   font-weight: bold;
   font-style: italic;
@@ -228,4 +229,7 @@
   max-width: 520px;
   margin: 12px auto 0 auto;
   padding: 0 16px;
+  &:hover {
+    color: $contentAccent;
+  }
 }
