--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -10,10 +10,6 @@
   }
 }
 
-.bgLight {
-  background: $backgroundPrimary;
-}
-
 .bgGray {
   background: $backgroundSecondary;
 }
@@ -22,6 +18,7 @@
   display: flex;
   justify-content: flex-end;
   cursor: pointer;
+  border: 1px solid pink;
 }
 
 .avatarWrap {
