--- a/widgets/Collapse/index.module.scss
+++ b/widgets/Collapse/index.module.scss
@@ -12,6 +12,7 @@
   }
   .card {
     background: $backgroundPrimary;
+    // background: $backgroundSecondary;
     border-radius: 8px;
     padding: 20px 18px;
     display: flex;
@@ -31,6 +32,7 @@
   }
   .children {
     background: $backgroundPrimary;
+    // background: $backgroundSecondary;
     padding: 0 18px;
     border-radius: 0 0 8px 8px;
     color: $contentSecondry;
