--- a/widgets/Loading/index.module.scss
+++ b/widgets/Loading/index.module.scss
@@ -5,8 +5,7 @@
   justify-content: center;
   align-items: center;
   div {
-    // display: inline-block;
-    border: 3px solid $accent;
+    border: 3px solid $contentPrimary;
     border-left-color: rgba(0, 0, 0, 0);
     border-radius: 50%;
     animation: spin 0.8s linear infinite;
