--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -88,3 +88,57 @@ $borderLightAccent: var(--borderLightAccent);
 $borderNotice: var(--borderNotice);
 $borderNegative: var(--borderNegative);
 $borderPositive: var(--borderPositive);
+
+:export {
+  name: 'scss';
+  primary: $primary;
+  secondary: $secondary;
+  accent: $accent;
+  notice: $notice;
+  negative: $negative;
+  positive: $positive;
+  shadow: $shadow;
+  mask: $mask;
+  backgroundPrimary: $backgroundPrimary;
+  backgroundSecondary: $backgroundSecondary;
+  backgroundTertiary: $backgroundTertiary;
+  backgroundInversePrimary: $backgroundInversePrimary;
+  backgroundInverseSecondary: $backgroundInverseSecondary;
+  contentPrimary: $contentPrimary;
+  contentSecondry: $contentSecondry;
+  contentTertiary: $contentTertiary;
+  contentInversePrimary: $contentInversePrimary;
+  contentInverseSecondary: $contentInverseSecondary;
+  contentInverseTertiary: $contentInverseTertiary;
+  borderOpaque: $borderOpaque;
+  borderTransparent: $borderTransparent;
+  borderSelected: $borderSelected;
+  borderInverseOpaque: $borderInverseOpaque;
+  bordeInverserTransparent: $borderInverseOpaque;
+  borderInverseSelected: $borderInverseSelected;
+  backgroundStateDisabled: $backgroundStateDisabled;
+  backgroundOverlayDark: $backgroundOverlayDark;
+  backgroundOverlayLight: $backgroundOverlayLight;
+  backgroundAccent: $backgroundAccent;
+  backgroundNotice: $backgroundNotice;
+  backgroundNegative: $backgroundNegative;
+  backgroundPositive: $backgroundPositive;
+  backgroundLightAccent: $backgroundLightAccent;
+  backgroundLightNotice: $backgroundLightNotice;
+  backgroundLightNegative: $backgroundLightNegative;
+  backgroundLightPositive: $backgroundLightPositive;
+  backgroundAlwaysDark: $backgroundAlwaysDark;
+  backgroundAlwaysLight: $backgroundAlwaysLight;
+  contentStateDisabled: $contentStateDisabled;
+  contentAlwaysDark: $contentAlwaysDark;
+  contentAlwaysLight: $contentAlwaysLight;
+  contentAccent: $contentAccent;
+  contentNotice: $contentNotice;
+  contentNegative: $contentNegative;
+  contentPositive: $contentPositive;
+  borderAccent: $borderAccent;
+  borderLightAccent: $borderLightAccent;
+  borderNotice: $borderNotice;
+  borderNegative: $borderNegative;
+  borderPositive: $borderPositive;
+}
