--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.bgLight {
+  background: $backgroundPrimary;
+}
+
 .bgGray {
   background: $backgroundSecondary;
 }
@@ -18,7 +22,6 @@
   display: flex;
   justify-content: flex-end;
   cursor: pointer;
-  border: 1px solid pink;
 }
 
 .avatarWrap {
