--- a/widgets/Input/index.module.scss
+++ b/widgets/Input/index.module.scss
@@ -2,7 +2,7 @@
   width: 328px;
   border: 2px solid $borderOpaque;
   border-radius: 8px;
-  padding: 8px 8px 8px 18px;
+  padding: 12px 12px 12px 18px;
   transition: border-color .2s;
 }
 
@@ -33,9 +33,8 @@
     flex: 1;
     color:$contentPrimary;
     background: $backgroundPrimary;
-    background: transparent;
     border: 0;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 24px;
     padding: 0;
     &:focus {
@@ -54,9 +53,6 @@
     &::placeholder {
       color: $contentSecondry;
     }
-    &:disabled {
-      cursor: not-allowed;
-    }
   }
 }
 
@@ -67,7 +63,7 @@
 }
 
 .disabled, .label input{
-  background: $backgroundSecondary;
+  background: $backgroundPrimary;
   color: $contentStateDisabled;
   cursor: not-allowed;
   -webkit-text-fill-color: $contentStateDisabled; /* required on iOS */
