--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -101,7 +101,7 @@
 
 .loadingWrap {
   max-width: 520px;
-  margin: 24px auto;
+  margin: 14px auto;
   padding: 16px;
   border-radius: 8px;
   background: $backgroundSecondary;
@@ -119,27 +119,35 @@
 
 .feedInfo {
   max-width: 520px;
-  margin: 24px auto 12px auto;
+  margin: 14px auto 12px auto;
   padding: 16px;
   border-radius: 8px;
   background: $backgroundSecondary;
+
   .feedDesc {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    p {
-      font-weight: bold;
-      margin: 4px 0;
-      color: $contentPrimary;
-      &:nth-child(2) {
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 18px;
-        border-left: 2px solid $borderSelected;
-        padding: 6px 8px;
-        background: $backgroundTertiary;
-        border-radius: 0 6px 6px 0;
-        margin-top: 10px;
+
+    >div {
+      max-width: 68%; // description may very long
+
+      p {
+        font-weight: bold;
+        margin: 4px 0;
+        color: $contentPrimary;
+        overflow-wrap: break-word;
+
+        &:nth-child(2) {
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 18px;
+          border-left: 2px solid $borderSelected;
+          padding: 6px 8px;
+          background: $backgroundTertiary;
+          border-radius: 0 6px 6px 0;
+          margin-top: 10px;
+        }
       }
     }
   }
