--- a/components/HotTopics/index.module.scss
+++ b/components/HotTopics/index.module.scss
@@ -9,6 +9,10 @@
   // font-style: italic;
 }
 
+.loading {
+  margin-top: 25%;
+}
+
 .card {
   background: $backgroundPrimary;
   border-radius: 8px;
