--- a/widgets/BottomSheet/index.module.scss
+++ b/widgets/BottomSheet/index.module.scss
@@ -7,7 +7,7 @@
   max-width: 840px;
   height: 100%;
   z-index: 99;
-  background-color: rgba(0, 0, 0, .07);
+  background-color: rgba(0, 0, 0, 0.07);
   overflow-x: auto;
   overflow-y: scroll;
 
