--- a/styles/themes.scss
+++ b/styles/themes.scss
@@ -1,105 +1,105 @@
 :root {
-  --primary: #00796B;
-  --secondary: #8FE2B0;
-  --accent: #1E88E5;
-  --notice: #F57C00;
-  --negative: #E57373;
-  --positive: #36AF66;
+  --primary: #00796b;
+  --secondary: #8fe2b0;
+  --accent: #1e88e5;
+  --notice: #f57c00;
+  --negative: #e57373;
+  --positive: #36af66;
   --shadow: rgba(30, 50, 70, 0.08);
   --mask: rgba(0, 0, 0, 0.7);
-  --backgroundPrimary: #FFFFFF;
-  --backgroundSecondary: #F4F6F7;
-  --backgroundTertiary: #E6E9EC;
-  --backgroundInversePrimary: #2A2D2F;
-  --backgroundInverseSecondary: #464A4E;
-  --contentPrimary: #2A2D2F;
-  --contentSecondry: #8A929A;
-  --contentTertiary: #AAB4BE;
-  --contentInversePrimary: #FFFFFF;
-  --contentInverseSecondary: #DFE2E6;
-  --contentInverseTertiary: #C0C7CE;
-  --borderOpaque: #E6E9EC;
+  --backgroundPrimary: #ffffff;
+  --backgroundSecondary: #f4f6f7;
+  --backgroundTertiary: #e6e9ec;
+  --backgroundInversePrimary: #2a2d2f;
+  --backgroundInverseSecondary: #464a4e;
+  --contentPrimary: #2a2d2f;
+  --contentSecondry: #8a929a;
+  --contentTertiary: #aab4be;
+  --contentInversePrimary: #ffffff;
+  --contentInverseSecondary: #dfe2e6;
+  --contentInverseTertiary: #c0c7ce;
+  --borderOpaque: #e6e9ec;
   --borderTransparent: rgba(0, 0, 0, 0.08);
-  --borderSelected: #2A2D2F;
+  --borderSelected: #2a2d2f;
   --borderInverseOpaque: #697076;
   --bordeInverserTransparent: rgba(0, 0, 0, 0.2);
-  --borderInverseSelected: #FFFFFF;
-  --backgroundStateDisabled: #F4F6F7;
+  --borderInverseSelected: #ffffff;
+  --backgroundStateDisabled: #f4f6f7;
   --backgroundOverlayDark: rgba(0, 0, 0, 0.3);
   --backgroundOverlayLight: rgba(0, 0, 0, 0.08);
-  --backgroundAccent: #1E88E5;
-  --backgroundNotice: #F57C00;
-  --backgroundNegative: #E57373;
-  --backgroundPositive: #36AF66;
-  --backgroundLightAccent: #E3F2FD;
-  --backgroundLightNotice: #FFF3E0;
-  --backgroundLightNegative: #FFEBEE;
-  --backgroundLightPositive: #E6F7EC;
-  --backgroundAlwaysDark: #2A2D2F;
-  --backgroundAlwaysLight: #FFFFFF;
-  --contentStateDisabled: #AAB4BE;
-  --contentAlwaysDark: #2A2D2F;
-  --contentAlwaysLight: #FFFFFF;
-  --contentAccent: #1E88E5;
-  --contentNotice: #F57C00;
-  --contentNegative: #E57373;
-  --contentPositive: #36AF66;
-  --borderAccent: #1E88E5;
-  --borderLightAccent: #90CAF9;
-  --borderNotice: #FFCC80;
-  --borderNegative: #EF9A9A;
-  --borderPositive: #8FE2B0;
+  --backgroundAccent: #1e88e5;
+  --backgroundNotice: #f57c00;
+  --backgroundNegative: #e57373;
+  --backgroundPositive: #36af66;
+  --backgroundLightAccent: #e3f2fd;
+  --backgroundLightNotice: #fff3e0;
+  --backgroundLightNegative: #ffebee;
+  --backgroundLightPositive: #e6f7ec;
+  --backgroundAlwaysDark: #2a2d2f;
+  --backgroundAlwaysLight: #ffffff;
+  --contentStateDisabled: #aab4be;
+  --contentAlwaysDark: #2a2d2f;
+  --contentAlwaysLight: #ffffff;
+  --contentAccent: #1e88e5;
+  --contentNotice: #f57c00;
+  --contentNegative: #e57373;
+  --contentPositive: #36af66;
+  --borderAccent: #1e88e5;
+  --borderLightAccent: #90caf9;
+  --borderNotice: #ffcc80;
+  --borderNegative: #ef9a9a;
+  --borderPositive: #8fe2b0;
 }
 
 [data-theme='dark'] {
-  --primary: #36ACA0;
-  --secondary: #0D796A;
-  --accent: #38A1F5;
-  --notice: #FFA117;
-  --negative: #AE352D;
-  --positive: #50AA78;
+  --primary: #36aca0;
+  --secondary: #0d796a;
+  --accent: #38a1f5;
+  --notice: #ffa117;
+  --negative: #ae352d;
+  --positive: #50aa78;
   --shadow: rgba(255, 255, 255, 0.24);
   --mask: rgba(0, 0, 0, 0.7);
   --backgroundPrimary: #080808;
-  --backgroundSecondary: #1E1E1E;
-  --backgroundTertiary: #2C2C2C;
-  --backgroundInversePrimary: #EFEFEF;
-  --backgroundInverseSecondary: #C8C8C8;
-  --contentPrimary: #EFEFEF;
-  --contentSecondry: #7C7C7C;
-  --contentTertiary: #5C5C5C;
+  --backgroundSecondary: #1e1e1e;
+  --backgroundTertiary: #2c2c2c;
+  --backgroundInversePrimary: #efefef;
+  --backgroundInverseSecondary: #c8c8c8;
+  --contentPrimary: #efefef;
+  --contentSecondry: #7c7c7c;
+  --contentTertiary: #5c5c5c;
   --contentInversePrimary: #080808;
   --contentInverseSecondary: #393939;
   --contentInverseTertiary: #494949;
-  --borderOpaque: #2C2C2C;
+  --borderOpaque: #2c2c2c;
   --borderTransparent: rgba(255, 255, 255, 0.08);
-  --borderSelected: #EFEFEF;
-  --borderInverseOpaque: #A2A2A2;
+  --borderSelected: #efefef;
+  --borderInverseOpaque: #a2a2a2;
   --bordeInverserTransparent: rgba(255, 255, 255, 0.2);
   --borderInverseSelected: #080808;
-  --backgroundStateDisabled: #1E1E1E;
+  --backgroundStateDisabled: #1e1e1e;
   --backgroundOverlayDark: rgba(255, 255, 255, 0.3);
   --backgroundOverlayLight: rgba(255, 255, 255, 0.08);
-  --backgroundAccent: #38A1F5;
-  --backgroundNotice: #FFA117;
-  --backgroundNegative: #AE352D;
-  --backgroundPositive: #50AA78;
-  --backgroundLightAccent: #1B2A37;
-  --backgroundLightNotice: #382B17;
+  --backgroundAccent: #38a1f5;
+  --backgroundNotice: #ffa117;
+  --backgroundNegative: #ae352d;
+  --backgroundPositive: #50aa78;
+  --backgroundLightAccent: #1b2a37;
+  --backgroundLightNotice: #382b17;
   --backgroundLightNegative: #372120;
-  --backgroundLightPositive: #1F3025;
+  --backgroundLightPositive: #1f3025;
   --backgroundAlwaysDark: #080808;
-  --backgroundAlwaysLight: #EFEFEF;
-  --contentStateDisabled: #5C5C5C;
+  --backgroundAlwaysLight: #efefef;
+  --contentStateDisabled: #5c5c5c;
   --contentAlwaysDark: #080808;
-  --contentAlwaysLight: #EFEFEF;
-  --contentAccent: #38A1F5;
-  --contentNotice: #FFA117;
-  --contentNegative: #AE352D;
-  --contentPositive: #50AA78;
-  --borderAccent: #38A1F5;
-  --borderLightAccent: #1D5684;
-  --borderNotice: #8A570D;
-  --borderNegative: #852E27;
-  --borderPositive: #2A6A43;
+  --contentAlwaysLight: #efefef;
+  --contentAccent: #38a1f5;
+  --contentNotice: #ffa117;
+  --contentNegative: #ae352d;
+  --contentPositive: #50aa78;
+  --borderAccent: #38a1f5;
+  --borderLightAccent: #1d5684;
+  --borderNotice: #8a570d;
+  --borderNegative: #852e27;
+  --borderPositive: #2a6a43;
 }
